intermediate - skeleton project to generate illustrations for protractor codeproject article